// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`redirects to Not Authorized for unauthenticated user 1`] = `
<DocumentFragment>
  <div>
    Not Authorized
  </div>
</DocumentFragment>
`;

exports[`renders protected Dashboard component for authenticated user 1`] = `
<DocumentFragment>
  <div>
    Dashboard
  </div>
</DocumentFragment>
`;
